--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,5 @@ anal-eyes = "0.0.1"
 [dependencies]
 anyhow = "1.0.82"
 derive_more = "0.99.17"
+rand = "0.8.5"
 serde = { version = "1.0.200", features = ["derive"] }
